--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,8 @@
                 <button class="view-services transition transform hover:-translate-y-1 motion-reduce:transition-none motion-reduce:hover:transform-none ...">View Resume</button>
             </div>
             <div class="col-md-5 col-sm-12 col-xs-12">
-                <img src="../../assets/MERM.png" alt="Roberto Rick" class="profile-image ">
+                <img src="assets/MERM.png" alt="Roberto Rick" class="profile-image ">
+                
             </div>
         </div>
     </div>
@@ -23,5 +24,6 @@
     </div>
 
     </div>
+  
     <app-about id="about" class="fade"></app-about>
     <app-education id="education" class="fade"></app-education>
